// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart onValueMouseOver() 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="linear"
  data={
    Array [
      Object {
        "angle": 30,
        "label": "First",
      },
      Object {
        "angle": 50,
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={200}
  innerRadius={0}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={100}
  width={200}
>
  <Hint
    align={
      Object {
        "horizontal": "auto",
        "vertical": "auto",
      }
    }
    format={[Function]}
    orientation="topleft"
    style={Object {}}
    value={
      Object {
        "angle": 50,
        "label": "Second",
      }
    }
  >
    <file__ChartTooltip>
      Second
    </file__ChartTooltip>
  </Hint>
</RadialChart>
`;

exports[`PieChart render() basic 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="linear"
  data={
    Array [
      Object {
        "angle": 30,
        "label": "First",
      },
      Object {
        "angle": 50,
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={200}
  innerRadius={0}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={100}
  width={200}
/>
`;

exports[`PieChart render() if hasCustomColors 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="literal"
  data={
    Array [
      Object {
        "angle": 30,
        "color": "#fff",
        "label": "First",
      },
      Object {
        "angle": 50,
        "color": "#fff",
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={200}
  innerRadius={0}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={100}
  width={200}
/>
`;

exports[`PieChart render() if height 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="linear"
  data={
    Array [
      Object {
        "angle": 30,
        "label": "First",
      },
      Object {
        "angle": 50,
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={300}
  innerRadius={0}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={100}
  width={200}
/>
`;

exports[`PieChart render() if innerRadius 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="linear"
  data={
    Array [
      Object {
        "angle": 30,
        "label": "First",
      },
      Object {
        "angle": 50,
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={200}
  innerRadius={300}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={100}
  width={200}
/>
`;

exports[`PieChart render() if radius 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="linear"
  data={
    Array [
      Object {
        "angle": 30,
        "label": "First",
      },
      Object {
        "angle": 50,
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={200}
  innerRadius={0}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={300}
  width={200}
/>
`;

exports[`PieChart render() if width 1`] = `
<RadialChart
  className=""
  colorRange={
    Array [
      "#12939A",
      "#79C7E3",
      "#1A3177",
      "#FF9833",
      "#EF5D28",
    ]
  }
  colorType="linear"
  data={
    Array [
      Object {
        "angle": 30,
        "label": "First",
      },
      Object {
        "angle": 50,
        "label": "Second",
      },
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getLabel={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSubLabel={[Function]}
  height={200}
  innerRadius={0}
  onSeriesMouseOut={[Function]}
  onValueMouseOver={[Function]}
  radius={100}
  width={300}
/>
`;
